Purpose: Bug fix
Description:
Typo in /hl/fortran/src Makefile.am caused obtuse compiler complaints from
some compilers (but not others).
Errors were of the form:
gcc: cannot specify -o with -c or -S and multiple compilations

Solution:
In AM_CLFAGS, missed -I before ../../hl/src.  This made gcc think that we
also wanted to compile /hl/src directory.  Fixed error by adding -I.

Platforms tested:
verbena, eirene.

--- a/hl/fortran/src/Makefile.am
+++ b/hl/fortran/src/Makefile.am
@@ -11,7 +11,7 @@
 
 include $(top_srcdir)/config/commence.am
 
-AM_CPPFLAGS=-I$(top_srcdir)/src -I$(top_srcdir)/hl/src $(top_builddir)/hl/src
+AM_CPPFLAGS=-I$(top_srcdir)/src -I$(top_srcdir)/hl/src -I$(top_builddir)/hl/src
 AM_FFLAGS=-I$(top_builddir)/fortran/src $(F9XMODFLAG)$(top_builddir)/fortran/src
 
 # Our main target, the high-level fortran library
