--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -25,12 +25,6 @@
 # reinvokes make in the various subdirectories.
 # You can alternatively invoke make from each subdirectory manually.
 #
-
-#------------------------------------------------------------ -*- makefile -*-
-# The following section of this makefile comes from the
-# `./config/commence' file which was generated with config.status
-# from `./config/commence.in'.
-#-----------------------------------------------------------------------------
 SHELL = @SHELL@
 
 srcdir = @srcdir@
@@ -90,6 +84,7 @@ AUTOMAKE = /usr/bin/automake
 AUTOHEADER = /usr/local/autoconf-2.59/bin/autoheader
 ADD_PARALLEL_FILES = @ADD_PARALLEL_FILES@
 AMTAR = @AMTAR@
+AM_MAKEFLAGS = @AM_MAKEFLAGS@
 AR = @AR@
 AS = @AS@
 AWK = @AWK@
@@ -450,16 +445,16 @@ lib progs check test _test:
 
 tests dep depend:
 	@@SETX@; for d in X $(SUBDIRS); do                                  \
-	  if test $$d != X; then                                              \
-	    (cd $$d && $(MAKE) $@) || exit 1;                                 \
+	  if test $$d != X; then                                            \
+	    (cd $$d && $(MAKE) $(AM_MAKEFLAGS) $@) || exit 1;               \
 	  fi;     
 	done
 
 # In docs directory, install-doc is the same as install
 install-doc install-all:
-	$(MAKE) install
+	$(MAKE) $(AM_MAKEFLAGS) install
 uninstall-doc uninstall-all:
-	$(MAKE) uninstall
+	$(MAKE) $(AM_MAKEFLAGS) uninstall
 
 # Don't include conclude, since the docs directory doesn't need to know how to
 # build anything.
